gui changes for h2t

--- a/BlueMS/src/main/res/values/strings.xml
+++ b/BlueMS/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
 
 <resources>
 
-    <string name="app_name" translatable="false">ST BLE Sensor</string>
+    <string name="app_name" translatable="false">WalkWell Heel-2-Toe</string>
 
     <string name="title_activity_debug_console">Debug Console</string>
 
