--- a/BlueMS/src/main/res/values/strings.xml
+++ b/BlueMS/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name">Name</string>
 
 </resources>
