--- a/BlueMS/src/main/res/values/strings.xml
+++ b/BlueMS/src/main/res/values/strings.xml
@@ -47,4 +47,15 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="name">Name</string>
 
+    <string-array name="XYZ">
+        <item>X</item>
+        <item>Y</item>
+        <item>Z</item>
+    </string-array>
+    <string-array name="frequency">
+        <item>50 Hz</item>
+        <item>40 Hz</item>
+        <item>25 Hz</item>
+    </string-array>
+
 </resources>
