fixed scaling issue

--- a/BlueMS/src/main/res/values/strings.xml
+++ b/BlueMS/src/main/res/values/strings.xml
@@ -57,5 +57,9 @@
         <item>40 Hz</item>
         <item>25 Hz</item>
     </string-array>
+    <string-array name="fileformat">
+        <item>MatLab file format</item>
+        <item>Heel2toe file format</item>
+    </string-array>
 
 </resources>
