--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,29 @@
+ST BLE Sensor V4.9.0
+- Added the Bluevoice full-duplex Demo
+- Added the support to STM32WB1x board
+- Added the Ambient Light Demo
+- Added the Extended Configuration Characteristic
+- Removed the “Toolbox” section. It’s now a standalone application:
+	https://play.google.com/store/apps/details?id=com.st.dit.stbletoolbox
+- Added the possibility to display Temperature on Celsius or Fahrenheit 
+- Fixed a bug for audio STL2TransportProtocol
+- Fixed Permissions request
+- Some UI Changes
+- bugs fix
+
+ST BLE Sensor v4.8.0
+- Added the Time-Of-Flight Multi Objects detection demo
+- Added static application shortcuts
+- Fixed a bug for missing file name for Fimware Over the Air update on STEVAL-MKSBOX1V1
+- Show also the list of demos not available for the current board
+- defined the board advertise code for STEVAL-STWINKT1
+- hide battery card if there is no battery information
+
+
+ST BLE Sensor v4.7.2
+ - Fixed the Portrait/Landscape problem for AzureIoT Cloud,IBM Watson IoT Quickstart Cloud and Firmware Update demos
+ - Fixed wrong .ucf file parsing for High Speed Data Log demo
+ - Added the capability to send the Wi-Fi Credentials to the node
 ST BLE Sensor v4.7.1
  - Added the new BLE advertise
  - Update the Paho library
