Align with ST BLE Sensor V5.2.10
Signed-off-by: Luca Pezzoni <luca.pezzoni@st.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="st_home_menuActions_profile">Change Profile</string>
     <string name="st_home_menuActions_addCatalog">Add Custom Fw Db Entry</string>
     <string name="st_home_menuActions_privacy">Privacy Policy</string>
+    <string name="st_home_menuActions_third_parties_licenses">Third Parties Licenses</string>
     <string name="st_home_menuActions_appSourceCode">Application Source Code</string>
     <string name="st_home_menuActions_about">About ST</string>
     <string name="st_home_menuActions_login">Login</string>
